broken-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: broken-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.20.1
    livenessProbe:
      httpGet:
        path: /
        port: 81
      initialDelaySeconds: 5
