init-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-test
spec:
  containers:
    - name: nginx
      image: nginx:stable
