new-namespace-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: new-namespace-pod
  namespace: new-namespace
spec:
  containers:
  - name: busybox
    image: busybox:stable
    command: ['sh', '-c', 'while true; do echo Running...; sleep 5; done']
