ambassador-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: ambassador-test-webserver
  labels:
    app: ambassador-test
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ambassador-test-svc
spec:
  selector:
    app: ambassador-test
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
